# frontier

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: docs.yml
docs/: node-template-release.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
node/src/rpc/eth/: consensus_data_provider.rs
runtime/: Cargo.toml  rustc-ice-2024-09-22T12_05_49-69871.txt  rustc-ice-2024-09-22T12_06_05-70419.txt  rustc-ice-2024-09-22T12_06_07-70466.txt  rustc-ice-2024-09-22T12_06_37-71264.txt  rustc-ice-2024-09-22T12_09_10-88951.txt
runtime/src/: lib.rs
scripts/: benchmark.sh
template/: Dockerfile  README.md
template/node/: Cargo.toml
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs  validator_manager.rs
ts-tests/tests/: config.ts
